<resources>
    <string name="app_name">Revolution IRC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tab_server">Server</string>
    <string name="message_hint">Send a message</string>
    <string name="message_disconnected">Disconnected</string>
    <string name="message_join">%s has joined</string>
    <string name="message_kick">%s has kicked %s (%s)</string>
    <string name="message_part">%s has left (%s)</string>
    <string name="message_part_no_message">%s has left</string>
    <string name="message_quit">%s has disconnected (%s)</string>
    <string name="message_nick_change">%s is now known as %s</string>
    <string name="message_topic">Topic: %s</string>
    <string name="message_topic_whotime">Topic was set by %s on %s</string>
    <string name="message_topic_by">Topic: %s, set by %s</string>
    <string name="message_host_info">Server name is %s, running %s. Supported user modes: %s, supported channel modes: %s</string>
    <string name="message_motd">Message of the Day</string>
    <string name="message_whois">%s\'s user information</string>
    <string name="message_mode">%s %s</string>
    <string name="message_mode_set">set %s</string>
    <string name="message_mode_unset">unset %s</string>
    <string name="message_mode_gave">gave %s</string>
    <string name="message_mode_removed">removed %s</string>
    <string name="message_mode_gave_to">%s to %s</string>
    <string name="message_mode_removed_from">%s from %s</string>
    <plurals name="message_mode_channel">
        <item quantity="one">channel mode \'%s\'</item>
        <item quantity="other">channel modes \'%s\'</item>
    </plurals>
    <string name="message_mode_channel_value">channel mode \'%s\' to %s</string>
    <string name="message_mode_channel_ban">a ban on %s</string>
    <string name="message_mode_nick_owner">channel owner status</string>
    <string name="message_mode_nick_admin">channel admin status</string>
    <string name="message_mode_nick_op">channel operator status</string>
    <string name="message_mode_nick_half_op">channel half-operator status</string>
    <string name="message_mode_nick_voice">voice</string>
    <string name="message_ctcp_ping">Received a CTCP ping</string>
    <string name="message_ctcp_version">Received a CTCP version</string>
    <string name="command_error_not_found">No such command was found.</string>
    <string name="command_error_internal">An internal error occurred when trying to process the command.</string>
    <string name="command_send_raw">Send as raw</string>
    <string name="channel_topic">Topic</string>
    <string name="channel_topic_info">set by %s on %s</string>
    <string name="channel_topic_none">No topic was set</string>
    <string name="channel_members">Members</string>
    <string name="message_sent">Message sent</string>
    <string name="message_share_title">Share the chat messages</string>
    <string name="message_new_messages">New messages</string>
    <plurals name="unread_message_counter">
        <item quantity="one">1 unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>
    <plurals name="message_delete_confirm">
        <item quantity="one">Are you sure you want to delete the selected message?</item>
        <item quantity="other">Are you sure you want to delete the selected %d messages?</item>
    </plurals>
    <string name="message_delete_confirm_note">The messages will only be deleted on this device.</string>
    <string name="action_ok">OK</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_expand">Expand</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="action_open">Open</string>
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
    <string name="action_disconnect_and_close">Disconnect and close</string>
    <string name="action_servers">Manage servers</string>
    <string name="action_add_below">Add below</string>
    <string name="action_add_rule">Add rule</string>
    <string name="action_reorder">Reorder</string>
    <string name="action_undo">Undo</string>
    <string name="action_copy">Copy</string>
    <string name="action_clone">Clone</string>
    <string name="action_continue">Continue</string>
    <string name="action_finish">Finish</string>
    <string name="action_search">Search</string>
    <string name="action_search_ellipsis">Search…</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_none">Do not sort</string>
    <string name="action_sort_name">Sort by name</string>
    <string name="action_join_channel">Join channel</string>
    <string name="action_message_user">Message user</string>
    <string name="action_part_channel">Leave channel</string>
    <string name="action_close_direct">Close conversation</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_reset">Reset</string>
    <string name="action_exit">Exit</string>
    <string name="action_reply">Reply</string>
    <string name="action_share">Share</string>
    <string name="action_dcc_send">Send a file using DCC</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="action_ask_again">Ask again</string>
    <string name="action_rename">Rename</string>
    <string name="action_export">Export</string>
    <string name="action_import_theme">Import theme</string>
    <string name="action_send">Send</string>
    <string name="action_delete_confirm_title">Are you sure?</string>
    <string name="action_delete_confirm_body">Are you sure you want to delete %s? This cannot be undone.</string>
    <string name="format_bold">Bold</string>
    <string name="format_italic">Italic</string>
    <string name="format_underline">Underline</string>
    <string name="format_text_color">Text color</string>
    <string name="format_fill_color">Background color</string>
    <string name="format_clear">Clear formatting</string>
    <string name="service_title">Connected to IRC</string>
    <plurals name="service_status_connected">
        <item quantity="one">Connected to %d network</item>
        <item quantity="other">Connected to %d networks</item>
    </plurals>
    <plurals name="service_status_connecting">
        <item quantity="one">connecting to %d network</item>
        <item quantity="other">connecting to %d networks</item>
    </plurals>
    <plurals name="service_status_disconnected">
        <item quantity="one">disconnected from %d network</item>
        <item quantity="other">disconnected from %d networks</item>
    </plurals>
    <plurals name="notify_multiple_messages">
        <item quantity="one">%d unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>
    <string name="notification_action_required">User action required</string>
    <string name="notification_channel_group_system">Miscellaneous notifications</string>
    <string name="notification_channel_group_default">Default notification rules</string>
    <string name="notification_channel_group_user">User notification rules</string>
    <string name="notification_channel_idle">Status Notification</string>
    <string name="notification_channel_warning">Warning Notifications</string>
    <string name="connection_error_no_nick">No nick set</string>
    <string name="connection_error_command_title">Error processing post-connect commands</string>
    <string name="connection_error_command_notification_desc">An internal error has occurred while trying to process post-connect commands.</string>
    <plurals name="connection_error_command_dialog_content">
        <item quantity="one">An error has occurred processing the following command for the network \"%s\":\n\n%s</item>
        <item quantity="other">An error has occurred processing the following commands for the network \"%s\":\n\n%s</item>
    </plurals>
    <string name="server_list_header_active">Active</string>
    <string name="server_list_header_inactive">Inactive</string>
    <plurals name="server_list_connected">
        <item quantity="one">Connected, %d channel</item>
        <item quantity="other">Connected, %d channels</item>
    </plurals>
    <string name="server_list_connecting">Connecting…</string>
    <string name="server_list_disconnected">Disconnected</string>
    <string name="add_server">Add a new server</string>
    <string name="server_user">User</string>
    <string name="action_sort_member_count">Sort by member count</string>
    <string name="value_any">Any</string>
    <string name="entry_comment">Comment</string>
    <string name="pref_header_user">User information</string>
    <string name="pref_title_default_nick">Default nicknames</string>
    <string name="pref_title_default_user">Default user</string>
    <string name="pref_title_default_realname">Default real name</string>
    <string name="pref_title_font">Font</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="pref_title_appbar_compact_mode">Hide the network name header</string>
    <string name="pref_title_message_format">Message format</string>
    <string name="pref_title_nick_autocomplete">Nick/channel autocomplete</string>
    <string name="pref_title_nick_autocomplete_show_button">Show a button</string>
    <string name="pref_summary_nick_autocomplete_show_button">Show a nick autocomplete button</string>
    <string name="pref_title_nick_autocomplete_double_tap">Double tap the text field</string>
    <string name="pref_summary_nick_autocomplete_double_tap">Double tap the text field to complete the nick or channel</string>
    <string name="pref_title_nick_autocomplete_suggestions">Suggest nicks</string>
    <string name="pref_summary_nick_autocomplete_suggestions">Show nick suggestions after typing at least two characters</string>
    <string name="pref_title_nick_autocomplete_at_suggestions">Suggest nicks after a \'@\'</string>
    <string name="pref_summary_nick_autocomplete_at_suggestions">Show nick suggestions after a \'@\' character</string>
    <string name="pref_title_nick_autocomplete_at_suggestions_remove_at">Automatically remove the \'@\'</string>
    <string name="pref_summary_nick_autocomplete_at_suggestions_remove_at">Remove the \'@\' character after selecting a suggestion</string>
    <string name="message_format">Format</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="notification_rule_chan_messages">Channel messages</string>
    <string name="notification_rule_direct">Private messages</string>
    <string name="notification_rule_notice">Private notices</string>
    <string name="notification_rule_chan_notice">Channel notices</string>
    <string name="notification_rule_server">Server</string>
    <string name="pref_header_reconnect">Reconnection</string>
    <string name="pref_title_auto_reconnect">Automatically reconnect</string>
    <string name="pref_description_auto_reconnect">Automatically attempt reconnection after a connection loss</string>
    <string name="pref_title_reconnect_connchg">Track connectivity changes</string>
    <string name="pref_description_reconnect_connchg">Automatically attempt reconnection after a connectivity change</string>
    <string name="pref_title_reconnect_pattern">Reconnection interval</string>
    <string name="title_activity_ignore_list">Ignore list</string>
    <string name="user_nick">Nick</string>
    <string name="user_hostname">Hostname</string>
</resources>