<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:key="dark_theme"
        android:title="@string/pref_title_dark_theme"
        android:summary="@string/pref_summary_dark_theme"
        android:defaultValue="false" />

    <io.mrarm.irc.preference.ListWithCustomPreference
        android:key="chat_font"
        android:title="@string/pref_title_font"
        android:entries="@array/pref_entries_font"
        android:entryValues="@array/pref_entry_values_font"
        android:defaultValue="default"
        app:customValueType="font" />

    <io.mrarm.irc.preference.FontSizePickerPreference
        android:key="chat_font_size"
        android:title="@string/pref_title_font_size" />

    <ListPreference
        android:key="chat_appbar_compact_mode"
        android:title="@string/pref_title_appbar_compact_mode"
        android:entries="@array/pref_entries_appbar_compact_mode"
        android:entryValues="@array/pref_entry_values_appbar_compact_mode"
        android:defaultValue="auto" />

    <Preference
        android:key="message_format"
        android:title="@string/pref_title_message_format">
        <intent
            android:targetPackage="io.mrarm.irc"
            android:targetClass="io.mrarm.irc.MessageFormatSettingsActivity" />
    </Preference>

    <Preference
        android:key="nick_autocomplete"
        android:title="@string/pref_title_nick_autocomplete"
        android:fragment="io.mrarm.irc.SettingsActivity$AutocompletePreferenceFragment" />

</PreferenceScreen>
