<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="default_nick"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_default_nick" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="default_user"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_default_user" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="default_realname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_default_realname" />

</PreferenceScreen>
