<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <io.mrarm.irc.view.LabelLayout
            android:id="@+id/nick_ctr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginRight="@dimen/activity_horizontal_margin_s4"
            android:hint="@string/user_nick"
            app:doNotExpand="true">

            <EditText
                android:id="@+id/nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_any" />

        </io.mrarm.irc.view.LabelLayout>

        <io.mrarm.irc.view.LabelLayout
            android:id="@+id/user_ctr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nick_ctr"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginRight="@dimen/activity_horizontal_margin_s4"
            android:layout_marginTop="@dimen/edit_command_alias_spacing"
            android:hint="@string/server_user"
            app:doNotExpand="true">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_any" />

        </io.mrarm.irc.view.LabelLayout>

        <io.mrarm.irc.view.LabelLayout
            android:id="@+id/host_ctr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_ctr"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginRight="@dimen/activity_horizontal_margin_s4"
            android:layout_marginTop="@dimen/edit_command_alias_spacing"
            android:hint="@string/user_hostname"
            app:doNotExpand="true">

            <EditText
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_any" />

        </io.mrarm.irc.view.LabelLayout>

        <CheckBox
            android:id="@+id/channel_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/host_ctr"
            android:layout_marginTop="@dimen/edit_command_alias_spacing"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginRight="@dimen/activity_horizontal_margin_s4"
            android:text="@string/notification_rule_chan_messages"
            android:checked="true" />

        <CheckBox
            android:id="@+id/channel_notices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/channel_messages"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginRight="@dimen/activity_horizontal_margin_s4"
            android:text="@string/notification_rule_chan_notice"
            android:checked="true" />

        <CheckBox
            android:id="@+id/direct_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/channel_notices"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginRight="@dimen/activity_horizontal_margin_s4"
            android:text="@string/notification_rule_direct"
            android:checked="true" />

        <CheckBox
            android:id="@+id/direct_notices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/direct_messages"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginRight="@dimen/activity_horizontal_margin_s4"
            android:text="@string/notification_rule_notice"
            android:checked="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_ctr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/direct_notices"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_s4"
            android:layout_marginStart="@dimen/activity_horizontal_margin_s4"
            android:layout_marginTop="@dimen/edit_command_alias_spacing"
            android:hint="@string/entry_comment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

</ScrollView>